archivos modificados: index.html agredado de etiquetas para una mejor lectura, index.css nueva fuente y menos espacio en la class .container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./index.css" >
     <script src="https://kit.fontawesome.com/eb496ab1a0.js"></script>
     <title>Ford</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -26,42 +29,50 @@
             </nav>
     </div>
     </header>
+    <!-- Pagina principal -->
     <main>
+        
         <h1>VEHICULOS</h1>
+    <!-- Contenedor carta de vehiculos -->
        <section alt="cartas ford" class="cartas-ford"> 
-            <div class="container"> 
-                    <article class="carta-ford">
-                        <img src="./Imagenes y videos/Explorer.jpg" alt="For-territory" class="cartas-autos-ford">
-                            <hr />
-                                <h4> FORD TERRITORY </h4>
-                                    <p>PRECIO $9.700.000</p>
-                                    <label for="">
-                                        <input type="button" value="Comprar ahora" class="button-carta-ford">
-                                    </label>
-                    </article>
-                <article class="carta-ford">
-                        <img src="./Imagenes y videos/ford-mondeo.jpg" alt="Ford-escape.img" class="cartas-autos-ford">
-                            <hr>
-                                <h4> FORD MONDEO </h4>
-                                        <p>PRECIO  $6.000.000</p>
+        <div class="container"> 
+                    <!-- Carta numero 1  -->
+                        <article class="carta-ford">
+                            <img src="./Imagenes y videos/Explorer.jpg" alt="For-territory" class="cartas-autos-ford">
+                                <hr />
+                                    <h4> FORD TERRITORY </h4>
+                                        <p>PRECIO $9.700.000</p>
                                         <label for="">
                                             <input type="button" value="Comprar ahora" class="button-carta-ford">
                                         </label>
-                </article>
+                        </article>
+            <!-- Carta numero 2 -->
                     <article class="carta-ford">
-                        <img src="./Imagenes y videos/ford-kuga.jpg" alt="Ford-kuga.img" class="cartas-autos-ford">
-                            <hr />
-                                <h4>FORD KUGA</h4>
-                                    <p>PRECIO  $7.500.000</p>
-                                        <label for="">
-                                            <input type="button" value="Comprar ahora" class="button-carta-ford">
-                                        </label>
+                            <img src="./Imagenes y videos/ford-mondeo.jpg" alt="Ford-escape.img" class="cartas-autos-ford">
+                                <hr>
+                                    <h4> FORD MONDEO </h4>
+                                            <p>PRECIO  $6.000.000</p>
+                                            <label for="">
+                                                <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                            </label>
                     </article>
-                </div>
+            <!-- Carta numero 3 -->
+                        <article class="carta-ford">
+                            <img src="./Imagenes y videos/ford-kuga.jpg" alt="Ford-kuga.img" class="cartas-autos-ford">
+                                <hr />
+                                    <h4>FORD KUGA</h4>
+                                        <p>PRECIO  $7.500.000</p>
+                                            <label for="">
+                                                <input type="button" value="Comprar ahora" class="button-carta-ford">
+                                            </label>
+                        </article>
+                    </div>
             </section>
+        <!-- Video de Ford raptor -->
         <video controls class="video-raptor" autoplay>
             <source src="./Imagenes y videos/Ford-raptor-presenting.mp4" type="video/mp4"    >
         </video>
+        <!-- Informacion sobre la for ranger -->
         <section alt="informacion-ranger" class="contenedor-ford">
             <H1>NUEVA FORD RAPTOR</H1>
             
