nueva barra de navegación

--- a/secciones/preguntas.html
+++ b/secciones/preguntas.html
@@ -4,27 +4,42 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../index.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../index.css" >
     <script src="https://kit.fontawesome.com/eb496ab1a0.js"></script>
     <title>Ford</title>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <a href="../index.html"><img src="../Imagenes y videos/ford.jpg" alt="" class="logo-ford"></a>
-        </div>
-            <div class="contenedor"> 
-                <img src="../Imagenes y videos/menu.png" alt="" class="contenedor_boton-menu">
-                    <nav class="nav-bar">
-                            <ul>
-                                <li class="list"><a href="../index.html">Inicio</a></li>
-                                <li class="list"><a href="../secciones/vehiculos.html">Vehiculos</a></li>
-                                <li class="list"><a href="../secciones/nosotros.html"> Sobre nosotros</a></li>
-                                <li class="list"><a href="../secciones/dudasyconsultas.html"> Dudas y consultas</a></li>
-                                <li class="list"><a href="../secciones/preguntas.html"> Preguntas frecuentes</a></li>
-                            </ul>
-                    </nav>
+       
+        <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
+            <div class="container-fluid ">
+              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" style="width: 200px;" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav c- ms-auto me-5 ">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../index.html">Pagina principal</a>
+                </li>
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link  active  " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
+                  </li>
+                </ul>
+              </div>
             </div>
+          </nav>
+    </header>
     </header>
     <main>
         <section class="contenedor_informacion">
