--- a/secciones/preguntas.html
+++ b/secciones/preguntas.html
@@ -15,7 +15,7 @@
        
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" style="width: 200px;" alt=""></a>
+              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
