--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./Imagenes y videos/ford.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./index.css" >
+    <link rel="stylesheet" href="./css/index.css" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- nav bar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
@@ -131,6 +132,7 @@
         </section>
 
     </main>
+    
     <footer>
         <a href="https://wa.me/5493416064006">WhatsApp: +54 341 606 4006</a>
         <a href="https://www.instagram.com/julifischerr/?next=%2F">Instagram: @julifischerr</a>
