--- a/secciones/dudasyconsultas.html
+++ b/secciones/dudasyconsultas.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../index.css" >
+    <link rel="stylesheet" href="../css/index.css" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Ford</title>
 </head>
 <body>
+    <!-- nav bar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
@@ -41,6 +42,7 @@
           </nav>
     </header>
     </header>
+    <!-- Formulario -->
     <main>
     <section class="section_formulario">    
        <form action="" class="formulario">
