--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../index.css" >
+    <link rel="stylesheet" href="../css/index.css" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Ford</title>
 </head>
 <body>
+    <!-- nav bar -->
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
@@ -43,6 +45,7 @@
     </header>
    <main>
     <div class="contenedor__texto__informativo__ford">
+      <!-- Historia ford -->
         <section class="texto__informativo__ford">
             <div><h1>Historia de Ford</h1>
                 <p>Ford fue fundada el 16 de junio de 1903 con 28.000 dólares aportados por once inversores, entre los que se incluía el socio que le dio nombre a la compañía, Henry Ford, que por aquel entonces contaba con 40 años de edad. En sus primeros años, Ford producía unos pocos coches por día en su fábrica en la avenida Mack en Detroit, Míchigan.</p>
@@ -58,6 +61,7 @@
                     <p> Hacia 1913, la compañía había desarrollado todas las técnicas básicas de línea de producción y producción en masa. Ford creó la primera línea de producción móvil del mundo ese año, la cual redujo el tiempo de ensamblaje del chasis de 12 horas y media a 100 minutos.</p>
             </div>
             <div class="contenedor__modelo__t">
+              <!-- Ford modelo T -->
             <h2 class="titulo__modelo__t">El modelo T </h2>
                     <p>
                         El Ford T apareció en el mercado el 1 de octubre de 1908 y presentaba una gran cantidad de innovaciones. Por ejemplo, tenía el volante a la izquierda, siendo esto algo que la gran mayoría de las otras compañías pronto copiaron. Todo el motor y la transmisión iban cerrados, los cuatro cilindros estaban encajados en un bloque sólido y la suspensión funcionaba mediante dos muelles semi-elípticos. El automóvil era muy sencillo de conducir y, más importante, muy barato y fácil de reparar. Era tan barato que, con un coste de 825 dólares estadounidenses en 1908 (el precio caía cada año), para 1920 la gran mayoría de conductores habían aprendido a conducir en el Ford T.</p>
