--- a/secciones/preguntas.html
+++ b/secciones/preguntas.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../index.css" >
+    <link rel="stylesheet" href="../css/index.css" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <title>Ford</title>
 </head>
 <body>
-    <header>
-       
+    <hader>
+    <!-- nav bar -->
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
-            <div class="container-fluid ">
+                      <div class="container-fluid ">
               <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,6 +42,7 @@
           </nav>
     </header>
     </header>
+    <!-- Seccion preguntas frecuentes -->
     <main>
         <section class="contenedor_informacion">
             <div class=" contenedor_informacion-contacto">
