--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./Imagenes y videos/ford.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/index.css" >
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
     <title>Ford</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/index.css" >
+    <link rel="shortcut icon" href="./Imagenes y videos/ford.png" type="image/x-icon" />
+    <meta name="keywords" content="Vehiculos, pick up, Ford, Raptor, 119 años">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Con mas de 119 años en el rubro, nos encargamos de que te lleves un vehiculo de primera calidad ¿Te lo vas a perder? "/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- nav bar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="./Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
+              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav c- ms-auto me-5 ">
                     <li class="nav-item">
-                        <a class="nav-link active  " aria-current="page" href="./index.html">Pagina principal</a>
-                      </li>  
+                        <a class="nav-link   active  " aria-current="page" href="../index.html">Pagina principal</a>
+                    </li>
                   <li class="nav-item">
-                    <a class="nav-link  " aria-current="page" href="./secciones/vehiculos.html">Vehiculos</a>
+                    <a class="nav-link" aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="./secciones/nosotros.html">Sobre nosotros</a>
+                    <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="./secciones/dudasyconsultas.html">Dudas y consultas</a>
+                    <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="./secciones/preguntas.html"> Preguntas frecuentes </a>
+                    <a class="nav-link " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
                   </li>
                 </ul>
               </div>
@@ -85,10 +86,10 @@
                     </div>
             </section>
         <!-- Video de Ford raptor -->
-        <video controls class="video-raptor" autoplay>
-            <source src="./Imagenes y videos/Ford-raptor-presenting.mp4" type="video/mp4"    >
+        <video controls muted autoplay loop class="video-raptor" autoplay>
+            <source src="./Imagenes y videos/Ford-raptor-presenting.mp4" type="video/mp4">
         </video>
-        <!-- Informacion sobre la for ranger -->
+        <!-- Informacion sobre la ford ranger -->
         <section alt="informacion-ranger" class="contenedor-ford">
             <H1>NUEVA FORD RAPTOR</H1>
             
@@ -134,10 +135,10 @@
     </main>
     
     <footer>
-        <a href="https://wa.me/5493416064006">WhatsApp: +54 341 606 4006</a>
-        <a href="https://www.instagram.com/julifischerr/?next=%2F">Instagram: @julifischerr</a>
-            <a href="https://twitter.com/Juliiifischer">Twitter: @Juliiifischer</a>
-                <a href="https://www.facebook.com/profile.php?id=100011089713376">Facebook: @julianfischer</a>
+        <a href="https://wa.me/5493416064006"><img src="./Imagenes y videos/whatsapp.png" alt="" class="redes__sociales"></a>
+        <a href="https://www.instagram.com/julifischerr/?next=%2F"><img src="./Imagenes y videos/Instagram-Logo-PNG-Free-Download.png" class="redes__sociales" alt=""></a>
+            <a href="https://twitter.com/Juliiifischer"><img src="./Imagenes y videos/twitter.png" class="redes__sociales" alt=""></a>
+                <a href="https://www.facebook.com/profile.php?id=100011089713376"><img src="./Imagenes y videos/facebook.png" class="redes__sociales" alt=""></a>
     </footer>
 </body>
 </html>
