--- a/secciones/dudasyconsultas.html
+++ b/secciones/dudasyconsultas.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Ford</title>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css" >
+    <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <title>Ford</title>
 </head>
 <body>
     <!-- nav bar -->
@@ -41,12 +41,12 @@
             </div>
           </nav>
     </header>
-    </header>
-    <!-- Formulario -->
+  
+    <!-- Formulario-->
     <main>
     <section class="section_formulario">    
        <form action="" class="formulario">
-            <h2 class="titulo_formulario">DUDAS Y CONSULTAS</h2>
+            <h1 class="titulo_formulario" style="color: black;">DUDAS Y CONSULTAS</h1>
             <div class="contenedor_inputs">    
                 <label for="nombre"> Nombre</label>
                 <input type="text" name="nombre" placeholder="" id="nombre" class="inputs">
@@ -71,10 +71,10 @@
     </section>
     </main>
     <footer>
-        <a href="https://wa.me/5493416064006">WhatsApp: +54 341 606 4006</a>
-            <a href="https://www.instagram.com/julifischerr/?next=%2F">Instagram: @julifischerr</a>
-                <a href="https://twitter.com/Juliiifischer">Twitter: @Juliiifischer</a>
-                    <a href="https://www.facebook.com/profile.php?id=100011089713376">Facebook: @julianfischer</a>
+      <a href="https://wa.me/5493416064006"><img src="../Imagenes y videos/whatsapp.png" alt="" class="redes__sociales"></a>
+      <a href="https://www.instagram.com/julifischerr/?next=%2F"><img src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png" class="redes__sociales" alt=""></a>
+          <a href="https://twitter.com/Juliiifischer"><img src="../Imagenes y videos/twitter.png" class="redes__sociales" alt=""></a>
+              <a href="https://www.facebook.com/profile.php?id=100011089713376"><img src="../Imagenes y videos/facebook.png" class="redes__sociales" alt=""></a>
     </footer>
 </body>
 </html>
