--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <title>Ford</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,26 +20,26 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
             <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
+              <a class="navbar-brand" href="#"><img src="./Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav c- ms-auto me-5 ">
                     <li class="nav-item">
-                        <a class="nav-link   active  " aria-current="page" href="../index.html">Pagina principal</a>
+                        <a class="nav-link   active  " aria-current="page" href="index.html">Pagina principal</a>
                     </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
+                    <a class="nav-link" aria-current="page" href="./secciones/vehiculos.html">Vehiculos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
+                    <a class="nav-link " href="./secciones/nosotros.html">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
+                    <a class="nav-link " href="./secciones/dudasyconsultas.html">Dudas y consultas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
+                    <a class="nav-link " href="./secciones/preguntas.html"> Preguntas frecuentes </a>
                   </li>
                 </ul>
               </div>
