--- a/secciones/dudasyconsultas.html
+++ b/secciones/dudasyconsultas.html
@@ -1,80 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Ford</title>
-    <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/index.css" >
-    <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
+  <head>
+    <title>Ford</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link
+      rel="shortcut icon"
+      href="../Imagenes y videos/ford.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- nav bar -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
-            <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav c- ms-auto me-5 ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Pagina principal</a>
-                    </li>
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link  active   " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img src="../Imagenes y videos/ford.jpg" class="logo-ford" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav c- ms-auto me-5">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Pagina principal</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="../secciones/vehiculos.html"
+                  >Vehiculos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/nosotros.html"
+                  >Sobre nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  href="../secciones/dudasyconsultas.html"
+                  >Dudas y consultas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/preguntas.html">
+                  Preguntas frecuentes
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-  
+
     <!-- Formulario-->
     <main>
-    <section class="section_formulario">    
-       <form action="" class="formulario">
-            <h1 class="titulo_formulario" style="color: black;">DUDAS Y CONSULTAS</h1>
-            <div class="contenedor_inputs">    
-                <label for="nombre"> Nombre</label>
-                <input type="text" name="nombre" placeholder="" id="nombre" class="inputs">
-            </div>
-            <div class="contenedor_inputs">    
-                <label for="Apellido"> Apellido   </label>
-                <input type="text" name="nombre" placeholder="" id="Apellido" class="inputs">
-            </div>
-            <div class="contenedor_inputs">    
-                <label for="E-mail"> E-mail</label>
-                <input type="text" name="nombre" placeholder="" id="E-mail" class="inputs">
-            </div> 
-            <div class="contenedor_inputs">    
-            <label for="textarea"> DUDA/CONSULTA </label>    
-            
+      <section class="section_formulario">
+        <form action="" class="formulario">
+          <h1 class="titulo_formulario" style="color: black">
+            DUDAS Y CONSULTAS
+          </h1>
+          <div class="contenedor_inputs">
+            <label for="nombre"> Nombre</label>
+            <input
+              type="text"
+              name="nombre"
+              placeholder=""
+              id="nombre"
+              class="inputs"
+            />
+          </div>
+          <div class="contenedor_inputs">
+            <label for="Apellido"> Apellido </label>
+            <input
+              type="text"
+              name="nombre"
+              placeholder=""
+              id="Apellido"
+              class="inputs"
+            />
+          </div>
+          <div class="contenedor_inputs">
+            <label for="E-mail"> E-mail</label>
+            <input
+              type="text"
+              name="nombre"
+              placeholder=""
+              id="E-mail"
+              class="inputs"
+            />
+          </div>
+          <div class="contenedor_inputs">
+            <label for="textarea"> DUDA/CONSULTA </label>
+
             <textarea name="" id="textarea" cols="50" rows="7"></textarea>
-            </div>
-            <div class=""> 
-                <input type="button" value="Enviar consulta" class="boton_enviar">
-            </div>
-       </form>
-    </section>
+          </div>
+          <div class="">
+            <input type="button" value="Enviar consulta" class="boton_enviar" />
+          </div>
+        </form>
+      </section>
     </main>
     <footer>
-      <a href="https://wa.me/5493416064006"><img src="../Imagenes y videos/whatsapp.png" alt="" class="redes__sociales"></a>
-      <a href="https://www.instagram.com/julifischerr/?next=%2F"><img src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png" class="redes__sociales" alt=""></a>
-          <a href="https://twitter.com/Juliiifischer"><img src="../Imagenes y videos/twitter.png" class="redes__sociales" alt=""></a>
-              <a href="https://www.facebook.com/profile.php?id=100011089713376"><img src="../Imagenes y videos/facebook.png" class="redes__sociales" alt=""></a>
+      <a href="https://wa.me/5493416064006"
+        ><img
+          src="../Imagenes y videos/whatsapp.png"
+          alt="logo-whatsapp.png"
+          class="redes__sociales"
+      /></a>
+      <a href="https://www.instagram.com/julifischerr/?next=%2F"
+        ><img
+          src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png"
+          class="redes__sociales"
+          alt="logo-instagram.png"
+      /></a>
+      <img
+        src="../Imagenes y videos/ford.jpg"
+        class="logo-ford-footer"
+        alt=""
+      />
+      <a href="https://twitter.com/Juliiifischer"
+        ><img
+          src="../Imagenes y videos/twitter.png"
+          class="redes__sociales"
+          alt="logo-twitter.png"
+      /></a>
+      <a href="https://www.facebook.com/profile.php?id=100011089713376"
+        ><img
+          src="../Imagenes y videos/facebook.png"
+          class="redes__sociales"
+          alt="logo-facebook.png"
+      /></a>
     </footer>
-</body>
+  </body>
 </html>
