--- a/secciones/preguntas.html
+++ b/secciones/preguntas.html
@@ -1,73 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Ford</title>
-  <link rel="shortcut icon" href="../Imagenes y videos/ford.png" type="image/x-icon" />
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/index.css" >
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</head>
-<body>
+  <head>
+    <title>Ford</title>
+    <link
+      rel="shortcut icon"
+      href="../Imagenes y videos/ford.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <header>
-    <!-- nav bar -->
-        <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
-                      <div class="container-fluid ">
-              <a class="navbar-brand" href="#"><img src="../Imagenes y videos/ford.jpg" class="logo-ford"alt="" ></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav c- ms-auto me-5 ">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Pagina principal</a>
-                </li>
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../secciones/vehiculos.html">Vehiculos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../secciones/nosotros.html">Sobre nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link " href="../secciones/dudasyconsultas.html">Dudas y consultas</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link  active  " href="../secciones/preguntas.html"> Preguntas frecuentes </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      <!-- nav bar -->
+      <nav class="navbar navbar-expand-lg navbar-background navbar-dark p-0">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img src="../Imagenes y videos/ford.jpg" class="logo-ford" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav c- ms-auto me-5">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Pagina principal</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="../secciones/vehiculos.html"
+                  >Vehiculos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/nosotros.html"
+                  >Sobre nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/dudasyconsultas.html"
+                  >Dudas y consultas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="../secciones/preguntas.html">
+                  Preguntas frecuentes
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <!-- Seccion preguntas frecuentes -->
     <main>
       <section class="contenedor_informacion">
-            <div class=" contenedor_informacion-contacto">
-                <img src="../Imagenes y videos/Telefono.png" alt="Contacto">
-                    <h4>Contacto</h4>
-                        <span> podes contactarnos de lunes a sabado de 9 a 18 hs</span>        
-                            <span> <strong> +54 9 341 606-4006 </strong></span>
-            </div>
-            <div class=" contenedor_informacion-contacto">
-                <img src="../Imagenes y videos/reloj.png" alt="Horarios">
-                    <h4>Nuestros Horarios</h4>
-                        <span> Abrimos <strong>todos los días</strong> de 9 a 20 hs</span>        
-            </div>
-            <div class=" contenedor_informacion-contacto">
-                <img src="../Imagenes y videos/Auto.png" alt="">
-                    <h4>Envios</h4>
-                        <span> Hacemos envios a todo el país sin cargo</span>        
-            </div>
-
-        </section>
+        <div class="contenedor_informacion-contacto">
+          <img src="../Imagenes y videos/Telefono.png" alt="telefono.png" />
+          <h4>Contacto</h4>
+          <span> podes contactarnos de lunes a sabado de 9 a 18 hs</span>
+          <span> <strong> +54 9 341 606-4006 </strong></span>
+        </div>
+        <div class="contenedor_informacion-contacto">
+          <img src="../Imagenes y videos/reloj.png" alt="reloj.png" />
+          <h4>Nuestros Horarios</h4>
+          <span> Abrimos <strong>todos los días</strong> de 9 a 20 hs</span>
+        </div>
+        <div class="contenedor_informacion-contacto">
+          <img src="../Imagenes y videos/Auto.png" alt="auto.png" />
+          <h4>Envios</h4>
+          <span> Hacemos envios a todo el país sin cargo</span>
+        </div>
+      </section>
+      <div>
+        <p class="mensaje__aviso">
+          Ante cualquier duda o consulta no dudes en comunicarte con nosotros
+          haciendo -> <a href="#" class="mensaje__aviso-link">click acá</a> <-
+        </p>
+      </div>
     </main>
     <footer>
-      <a href="https://wa.me/5493416064006"><img src="../Imagenes y videos/whatsapp.png" alt="" class="redes__sociales"></a>
-      <a href="https://www.instagram.com/julifischerr/?next=%2F"><img src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png" class="redes__sociales" alt=""></a>
-          <a href="https://twitter.com/Juliiifischer"><img src="../Imagenes y videos/twitter.png" class="redes__sociales" alt=""></a>
-              <a href="https://www.facebook.com/profile.php?id=100011089713376"><img src="../Imagenes y videos/facebook.png" class="redes__sociales" alt=""></a>
+      <a href="https://wa.me/5493416064006"
+        ><img
+          src="../Imagenes y videos/whatsapp.png"
+          alt="logo-whatsapp.png"
+          class="redes__sociales"
+      /></a>
+      <a href="https://www.instagram.com/julifischerr/?next=%2F"
+        ><img
+          src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png"
+          class="redes__sociales"
+          alt="logo-instagram.png"
+      /></a>
+      <img
+        src="../Imagenes y videos/ford.jpg"
+        class="logo-ford-footer"
+        alt=""
+      />
+      <a href="https://twitter.com/Juliiifischer"
+      ><img 
+          src="../Imagenes y videos/twitter.png"
+          class="redes__sociales"
+          alt="logo-twitter.png"
+      /></a>
+      <a href="https://www.facebook.com/profile.php?id=100011089713376"
+        ><img
+          src="../Imagenes y videos/facebook.png"
+          class="redes__sociales"
+          alt="logo-facebook.png"
+      /></a>
     </footer>
-</body>
+  </body>
 </html>
