agregado de comentarios restantes

--- a/secciones/preguntas.html
+++ b/secciones/preguntas.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <title>Ford</title>
-    <link
-      rel="shortcut icon"
-      href="../Imagenes y videos/ford.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon"href="../Imagenes y videos/ford.png"type="image/x-icon"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/index.css" />
     <meta charset="UTF-8" />
@@ -105,29 +101,34 @@
       </div>
     </main>
     <footer>
+      <!-- whatsapp -->
       <a href="https://wa.me/5493416064006"
         ><img
           src="../Imagenes y videos/whatsapp.png"
           alt="logo-whatsapp.png"
           class="redes__sociales"
       /></a>
-      <a href="https://www.instagram.com/julifischerr/?next=%2F"
-        ><img
+      <!-- instagram -->
+      <a href="https://www.instagram.com/julifischerr/?next=%2F">
+        <img
           src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png"
           class="redes__sociales"
           alt="logo-instagram.png"
       /></a>
+      <!-- Logo ford -->
       <img
         src="../Imagenes y videos/ford.jpg"
         class="logo-ford-footer"
         alt=""
       />
+      <!-- Twitter -->
       <a href="https://twitter.com/Juliiifischer"
       ><img 
           src="../Imagenes y videos/twitter.png"
           class="redes__sociales"
           alt="logo-twitter.png"
       /></a>
+      <!-- facebook -->
       <a href="https://www.facebook.com/profile.php?id=100011089713376"
         ><img
           src="../Imagenes y videos/facebook.png"
