--- a/secciones/vehiculos.html
+++ b/secciones/vehiculos.html
@@ -109,11 +109,41 @@
         </section>
     </main>
     <footer>
-        <a href="https://wa.me/5493416064006"><img src="../Imagenes y videos/whatsapp.png" alt="logo-whatsapp.png" class="redes__sociales"></a>
-            <a href="https://www.instagram.com/julifischerr/?next=%2F"><img src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png" class="redes__sociales" alt="logo-instagram.png"></a>
-                <img src="../Imagenes y videos/ford.jpg" class="logo-ford-footer"alt="" >
-                    <a href="https://twitter.com/Juliiifischer"><img src="../Imagenes y videos/twitter.png" class="redes__sociales" alt="logo-twitter.png"></a>
-                         <a href="https://www.facebook.com/profile.php?id=100011089713376"><img src="../Imagenes y videos/facebook.png" class="redes__sociales" alt="logo-facebook.png"></a>
-                        </footer>
+        <footer>
+            <!-- whatsapp -->
+            <a href="https://wa.me/5493416064006"
+              ><img
+                src="../Imagenes y videos/whatsapp.png"
+                alt="logo-whatsapp.png"
+                class="redes__sociales"
+            /></a>
+            <!-- instagram -->
+            <a href="https://www.instagram.com/julifischerr/?next=%2F">
+              <img
+                src="../Imagenes y videos/Instagram-Logo-PNG-Free-Download.png"
+                class="redes__sociales"
+                alt="logo-instagram.png"
+            /></a>
+            <!-- Logo ford -->
+            <img
+              src="../Imagenes y videos/ford.jpg"
+              class="logo-ford-footer"
+              alt=""
+            />
+            <!-- Twitter -->
+            <a href="https://twitter.com/Juliiifischer"
+            ><img 
+                src="../Imagenes y videos/twitter.png"
+                class="redes__sociales"
+                alt="logo-twitter.png"
+            /></a>
+            <!-- facebook -->
+            <a href="https://www.facebook.com/profile.php?id=100011089713376"
+              ><img
+                src="../Imagenes y videos/facebook.png"
+                class="redes__sociales"
+                alt="logo-facebook.png"
+            /></a>
+          </footer>
 </body>
 </html>
